fix numerous iPad problems, and tweak splash and console for better appearance on small screens

--- a/war/css/console.css
+++ b/war/css/console.css
@@ -1,5 +1,5 @@
 /* Some global settings */
-html, body, .EntryHeader{	min-width:		625px; }
+html, body, .EntryHeader{	min-width:		300px; }
 html, body, h1, h2, #header, #fileInfo, #toolbar *, #defn, #footer, #inter, input, form{
   padding:		0px;
   font-family: Lato, Century Gothic, Arial, Helvetica, sans-serif;
@@ -110,7 +110,6 @@ div#programList{
   position:		absolute;
   top:			85px;
   width:			100%;
-  min-width:		625px;
 }
 
 #programList ul{
@@ -138,14 +137,13 @@ li.ProgramEntry:hover{ background: rgb(117, 50, 138);}
 li.ProgramEntry:hover * { color: white;}
 
 
-.ProgramTitle{min-width: 300px; margin-left: 65px;}
+.ProgramTitle{width: 40%; min-width: 250px; margin-left: 65px; cursor: pointer; font-size: 16px; text-align: left;}
 .ProgramId{width: 100px;}
 .ProgramModified{text-align: left; width: 175px;}
 .ProgramPublished{width: 50px; text-align: center;}
 .ProgramPublished img.button {width: 18px; height: 18px; cursor: pointer; position: relative}
 .ProgramDelete{width: 50px; text-align: center;}
 .ProgramDelete img.button {width: 18px; height: 18px; cursor: pointer;}
-.ProgramTitle{cursor: pointer; font-size: 16px; text-align: left;}
 input.ProgramModified{cursor: pointer; font-size: 16px; text-align: left;}
 
 /* Link Sharing Box */
@@ -204,6 +202,7 @@ a.headerlink {
 }
 
 
-@media only screen and (max-width: 480px), only screen and (max-device-width: 480px){
+@media only screen and (max-width: 600px), only screen and (max-device-width: 600px){
   .ProgramModified{display: none;}
+  .ProgramTitle{width: auto; min-width: 200px;}
 }
