--- a/war/css/splash.css
+++ b/war/css/splash.css
@@ -1,6 +1,6 @@
 body{
 	width:		100%;
-	min-width:	650px;
+	min-width:	300px;
 	height:		100%;
 	padding:	0px;
 	margin:		0px;
@@ -22,9 +22,7 @@ h1, h2{
 h1{font-size: 60px; margin-bottom: 0px;}
 h2{font-size: 20px;}
 
-img{background: none;
-	vertical-align: middle;
-}
+img{background: none; 	vertical-align: middle; width: 40%; max-width: 450px;}
 #splash{
 	position:	absolute;
 	width:		100%;
@@ -86,4 +84,8 @@ input{
 }
 input:hover{
 	background: gray;
+}
+
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px){
+  input{font-size: 14px; width: 100px;}
 }
